<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="?android:attr/selectableItemBackground">

    <CheckBox
        android:id="@+id/checkbox_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/habit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/habit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_description"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:visibility="visible" /> <!-- Set visibility to gone if you don't want delete button to show always -->

</LinearLayout>
